First Version of 1.1 Motivation und Anwendungsszenario

--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -2,5 +2,30 @@
 \label{cha:Einleitung}
 
 \section{Motivation und Anwendungsszenario}
+In Deutschland ist seit dem Erfolg der Nationalmannschaft bei der Basketball-Weltmeisterschaft 2023 eine deutliche Reichweitensteigerung in der Sportberichterstattung 
+zu beobachten[1]. Das WM-Finale 2023 verfolgten im ZDF im Durchschnitt rund 4,63 Mio. Zuschauerinnen und Zuschauer[2]. Eine solche öffentliche Präsenz kann die Nachfrage 
+nach niedrigschwelligen Einstiegsmöglichkeiten und trainingsbegleitenden Angeboten im Basketball begünstigen. Für frühe, reproduzierbare Erfolgserlebnisse ist dabei 
+insbesondere die Qualität der Wurfausführung entscheidend. Daraus ergibt sich ein praxisrelevantes Ziel: Trainingsprozesse durch datenbasierte, technologische 
+Hilfsmittel so zu unterstützen, dass Wurfleistungen gezielt und nachvollziehbar verbessert werden können. Ein zentraler Ansatzpunkt ist die quantitative Analyse von Ballflugbahnen. 
 
-Das wird eine tolle Arbeit. Hoffentlich gut genug. bitte
+Basketballwürfe sind das Ergebnis hochkomplexer biomechanischer und physikalischer Abläufe. Bereits geringe Abweichungen in 
+Abwurfwinkel, Abwurfgeschwindigkeit oder Abwurfhöhe können die Flugbahn und damit den Wurferfolg maßgeblich beeinflussen. Für eine methodisch kontrollierbare 
+Untersuchung bietet sich der Freiwurf an. Er wird aus einer definierten Position ausgeführt, unter weitgehend konstanten Randbedingungen und ohne unmittelbaren 
+defensiven Druck. Damit reduziert sich die Variabilität externer Störeinflüsse, was den Freiwurf als standardisierte Basissituation für Modellierung und Vergleich 
+besonders geeignet macht.
+
+Auch aus sportpraktischer Perspektive ist der Freiwurf relevant. Empirische Analysen aus dem US-amerikanischen College-Basketball zeigen, dass rund 20\,\% aller erzielten 
+Punkte durch Freiwürfe resultierten. Ergänzend wird berichtet, dass bei gleichstarken Teams in 80\,\% der Fälle jene Mannschaft gewinnt, die über die höhere Freiwurfquote 
+verfügte ~\cite{kozar1994}. Der Freiwurf ist damit nicht nur ein grundlegendes technisches Element, sondern auch ein leistungsentscheidender Faktor. 
+Folglich eignet er sich als Untersuchungseinheit dieser Arbeit, um Wurfdaten unter kontrollierten Bedingungen systematisch auszuwerten.
+
+Vor diesem Hintergrund eröffnet Maschinelles Lernen einen technologischen Rahmen, um aus Wurfdaten Trajektorien vorherzusagen und Rückschlüsse auf zugrunde liegende 
+Abwurfparameter zu ziehen. Diese Arbeit grenzt sich dabei bewusst von der Fragestellung ab, eine allgemeingültige „optimale“ Flugbahn herzuleiten, 
+die Sportlerinnen und Sportler idealerweise reproduzieren sollten. Im Mittelpunkt steht stattdessen ein personenbezogenes Anwendungsszenario im Sinne 
+einer personalisierten Trainingsassistenz: Auf Basis der Daten eines spezifischen Sportlers bzw. einer spezifischen Sportlerin sollen Modelle individuelle Muster 
+identifizieren und daraus sportartspezifisch interpretierbare Hinweise für die Verbesserung ableiten. Der praktische Mehrwert liegt damit nicht in einer normativen 
+Vorgabe, sondern in diagnostischer Unterstützung. Aus den Analysen sollen konkrete, sportartspezifisch interpretierbare Hinweise entstehen.
+
+\section{Zielsetzung und Forschungsfragen}
+
+\section{Aufbau der Arbeit}
