--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -42,4 +42,25 @@
   urldate = {2025-10-03}
 }
 
+@report{sinus2025mehralsmedaillen,
+  author      = {Calmbach, Marc and Flaig, Bodo and Gaber, Rusanna},
+  title       = {Mehr als Medaillen? Was sich unsere Gesellschaft vom Leistungssport erwartet. Studie zur Wahrnehmung des gesellschaftlichen Nutzens des Leistungssports und dessen F{\"o}rderung},
+  institution = {{SINUS Markt- und Sozialforschung GmbH}},
+  address     = {Berlin and Heidelberg},
+  year        = {2025},
+  month       = jul,
+  note        = {Auftraggeber: Deutscher Olympischer Sportbund (DOSB) e.V. und Athleten Deutschland e.V.}
+}
+
+@online{weis2023topquoten,
+  author  = {Weis, Manuel},
+  title   = {Top-Quoten f{\"u}r historischen Sieg der Basketballer},
+  year    = {2023},
+  month   = sep,
+  url     = {https://www.dwdl.de/zahlenzentrale/94617/topquoten_fuer_historischen_sieg_der_basketballer/},
+  note    = {DWDL.de (Zahlenzentrale); online ver{\"o}ffentlicht am 11. September 2023},
+  urldate = {2026-01-09}
+}
+
+
 
