erste Fassung von Kapitel 1.3 Aufbau der Arbeit und Files für die anderen Kapitel

--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -53,3 +53,10 @@ Trainingsassistenz ableiten lassen. Aus diesen Zielen ergeben sich die folgenden
 
 \section{Aufbau der Arbeit}
 
+Die Arbeit beginnt in Kapitel~\ref{cha:grundlagen} mit der Darstellung der theoretischen Grundlagen, welche alle Konzepte abdecken, die für das Verständnis und 
+Interpretation der Ergebnisse relevant sind. In Kapitel~\ref{cha:verwandteArbeiten} werden verwandte Arbeiten aus dem Bereich vorgestellt, in dem sich die 
+vorliegende Arbeit einordnet. Kapitel~\ref{cha:problemstellung} konkretisiert die Problemstellung und erfasst alle zu bewältigenden Aufgaben, die zur Erfüllung der
+Zielsetzung notwendig sind. In Kapitel~\ref{cha:methodik_und_modelle} wird die genaue Umsetzung zur synthetischen Datengenerierung beschrieben, sowie die 
+konzipierten Modellansätze und der Versuchsaufbau erläutert, der zur Evaluation der Modelle dient. Kapitel~\ref{cha:ergebnisse_und_diskussion} präsentiert 
+die erzielten Ergebnisse und diskutiert diese im Kontext der Forschungsfragen. Abschließend fasst Kapitel~\ref{cha:fazit} die zentralen Erkenntnisse der Arbeit 
+zusammen, reflektiert deren Bedeutung und gibt einen Ausblick auf mögliche zukünftige Forschungsrichtungen.
