--- a/Masterarbeit.tex
+++ b/Masterarbeit.tex
@@ -99,6 +99,16 @@
 
 \include{Inhalt/Grundlagen}
 
+\include{Inhalt/VerwandteArbeiten}
+
+\include{Inhalt/Problemstellung}
+
+\include{Inhalt/Methodik_und_Modelle}
+
+\include{Inhalt/Ergebnisse_und_Diskussion}
+
+\include{Inhalt/Fazit}
+
 % Literaturverzeichnis -----------------------------------------------------
 %		Das Literaturverzeichnis wird aus der Datenbank erstellt.
 %		Die genaue Verwendung von biblatex wird hier jedoch nicht erklärt.
