überarbeitete fassung von 1.3 Aufbau der Arbeit

--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -53,10 +53,14 @@ Trainingsassistenz ableiten lassen. Aus diesen Zielen ergeben sich die folgenden
 
 \section{Aufbau der Arbeit}
 
-Die Arbeit beginnt in Kapitel~\ref{cha:grundlagen} mit der Darstellung der theoretischen Grundlagen, welche alle Konzepte abdecken, die für das Verständnis und 
-Interpretation der Ergebnisse relevant sind. In Kapitel~\ref{cha:verwandteArbeiten} werden verwandte Arbeiten aus dem Bereich vorgestellt, in dem sich die 
-vorliegende Arbeit einordnet. Kapitel~\ref{cha:problemstellung} konkretisiert die Problemstellung und erfasst alle zu bewältigenden Aufgaben, die zur Erfüllung der
-Zielsetzung notwendig sind. In Kapitel~\ref{cha:methodik_und_modelle} wird die genaue Umsetzung zur synthetischen Datengenerierung beschrieben, sowie die 
-konzipierten Modellansätze und der Versuchsaufbau erläutert, der zur Evaluation der Modelle dient. Kapitel~\ref{cha:ergebnisse_und_diskussion} präsentiert 
-die erzielten Ergebnisse und diskutiert diese im Kontext der Forschungsfragen. Abschließend fasst Kapitel~\ref{cha:fazit} die zentralen Erkenntnisse der Arbeit 
-zusammen, reflektiert deren Bedeutung und gibt einen Ausblick auf mögliche zukünftige Forschungsrichtungen.
+Kapitel~\ref{cha:grundlagen} legt die theoretischen Grundlagen dar und führt die für die Arbeit zentralen Konzepte ein, die zur Einordnung und Interpretation der 
+Ergebnisse erforderlich sind. Daran anschließend ordnet Kapitel~\ref{cha:verwandteArbeiten} die Arbeit in den Stand der Forschung ein und diskutiert relevante Ansätze 
+aus der Trajektorienmodellierung sowie dem physikinformierten maschinellen Lernen.
+
+Die konkrete Aufgabenstellung wird in Kapitel~\ref{cha:problemstellung} präzisiert; dabei werden die zu lösenden Teilprobleme strukturiert und die Zielkriterien für 
+die Evaluation abgeleitet. Kapitel~\ref{cha:methodik_und_modelle} beschreibt darauf aufbauend die Methodik: Es werden die synthetische Datengenerierung, die 
+konzipierten Modellansätze sowie das Experimentdesign zur vergleichenden Bewertung der Modelle erläutert.
+
+Kapitel~\ref{cha:ergebnisse_und_diskussion} präsentiert die empirischen Resultate und diskutiert sie systematisch im Bezug auf die Forschungsfragen. 
+Abschließend fasst Kapitel~\ref{cha:fazit} die wesentlichen Erkenntnisse zusammen, reflektiert ihre Aussagekraft und skizziert Perspektiven für weiterführende 
+Untersuchungen.
