Erste Fassung der Einleitung in Kapitel 2 und von 2.1 Ballistisches Modell

--- a/Inhalt/Problemstellung.tex
+++ b/Inhalt/Problemstellung.tex
@@ -1,2 +1,10 @@
 \chapter{Problemstellung}
 \label{cha:problemstellung}
+
+Für die Datengenerierung des Freiwurfs sind vor allem die physikalischen Größen (Parameter und Variablen) ausschlaggebend. Haußer \& Luchko~\cite{hausser2019} ziehen 
+die relevanten Parameter für das Spielfeld und den Ball aus dem Regelwerk der NBA. Das Spielfeld misst nach den offiziellen Regeln 94\,ft in der Länge und 50\,ft in der Breite. Die Korbanlagen 
+sind jeweils mittig an den Grundlinien positioniert, wobei die Vorderfläche des Backboards 4\,ft von der Grundlinie entfernt ist. Der Ring des Korbs befindet 
+sich 10\,ft über dem Spielfeldboden. Er ist an das Backboard montiert. Der horizontale Abstand zwischen dem Backboard und der Freiwurflinie beträgt 
+15\,in~\cite{nba_rules}. Die Normen für den Ball der Männer liegen bei einen Umfang zwischen 75 und 78\,cm und einem Gewicht zwischen 600 und 650\,g. Sein Radius ist 
+als Intervall angegeben und die Oberfläche ist aus Leder und Kunststoff~\cite{nba_rules}.
+
