--- a/Masterarbeit.tex
+++ b/Masterarbeit.tex
@@ -44,7 +44,7 @@
 \input{Seitenstil}
 
 % Eigene Definitionen für Silbentrennung
-\include{Silbentrennung}
+%\include{Silbentrennung}
 % Das eigentliche Dokument -------------------------------------------------
 %		Der eigentliche Inhalt des Dokuments beginnt hier. Die einzelnen Seiten
 %		und Kapitel werden in eigene Dateien ausgelagert und hier nur inkludiert.
@@ -62,7 +62,7 @@
 % Deckblatt
 \include{Deckblatt}
 
-\include{Inhalt/Abstract}
+%\include{Inhalt/Abstract}
 % \include{Inhalt/Danksagung}
 \ofoot{\pagemark}
 
