--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -27,7 +27,7 @@ identifizieren und daraus sportartspezifisch interpretierbare Hinweise für die 
 Vorgabe, sondern in diagnostischer Unterstützung. Aus den Analysen sollen konkrete, sportartspezifisch interpretierbare Hinweise entstehen.
 
 \section{Zielsetzung und Forschungsfragen}
-Diese Arbeit zielt auf eine datenbasierte Analyse von Basketball-Freiwürfen unter kontrollierten Bedingungen ab. Da kein geeigneter realer Datensatz zur Verfügung 
+Diese Arbeit zielt auf eine datenbasierte Analyse von Basketball-Freiwürfen unter kontrollierten Bedingungen ab. Da kein öffentlich verfügbarer Datensatz zur Verfügung 
 steht, wird zunächst ein synthetischer Datensatz erstellt, der 2D-Ballflugbahnen aus einem physikalisch motivierten Bewegungsmodell ableitet. Hierzu wird ein 
 ballistisches Modell implementiert, das zentrale Einflussgrößen des Freiwurfs abbildet und Trajektorien als Funktion relevanter Abwurfparameter generiert. 
 Der Datensatz dient anschließend als definierte Grundlage zur Entwicklung, zum Vergleich und zur Bewertung lernbasierter Verfahren.
@@ -36,9 +36,9 @@ Auf dieser Basis werden zwei neuronale Modellansätze konzipiert und experimente
 während der zweite Ansatz physikalisches Vorwissen explizit in die Modellierung einbindet, um physikkonsistente Vorhersagen zu begünstigen. Der Vergleich erfolgt 
 entlang dreier Aufgabentypen, die unterschiedliche Aspekte des Problems abdecken:
 \begin{itemize}
-    \item \textbf{Trajektorienvorhersage aus variierenden Eingaberepräsentationen} 
-    \item \textbf{Parameterrekonstruktion als inverse Modellierung} 
-    \item \textbf{Wurfklassifikation der vorhergesagten Trajektorien in die Kategorien „zu kurz“, „Treffer“ und „zu lang“}
+    \item \textbf{(1):}Trajektorienvorhersage aus variierenden Eingaberepräsentationen
+    \item \textbf{(2):}Parameterrekonstruktion als inverse Modellierung 
+    \item \textbf{(3):}Wurfklassifikation der vorhergesagten Trajektorien in die Kategorien „zu kurz“, „Treffer“ und „zu lang“
 \end{itemize}
 Zur Einordnung der Praxistauglichkeit wird das leistungsstärkste Modell anschließend einer Robustheitsanalyse unterzogen, insbesondere gegenüber Variation der 
 Eingabequalität und Störeinflüssen. Abschließend wird diskutiert, in welchem Umfang sich aus den Modellausgaben interpretierbare Hinweise für eine diagnostische 
@@ -54,12 +54,12 @@ Trainingsassistenz ableiten lassen. Aus diesen Zielen ergeben sich die folgenden
 \section{Aufbau der Arbeit}
 
 Kapitel~\ref{cha:grundlagen} legt die theoretischen Grundlagen dar und führt die für die Arbeit zentralen Konzepte ein, die zur Einordnung und Interpretation der 
-Ergebnisse erforderlich sind. Daran anschließend ordnet Kapitel~\ref{cha:verwandteArbeiten} die Arbeit in den Stand der Forschung ein und diskutiert relevante Ansätze 
-aus der Trajektorienmodellierung sowie dem physikinformierten maschinellen Lernen.
+Ergebnisse erforderlich sind. Daran anschließend erfolgt in Kapitel~\ref{cha:verwandteArbeiten} eine Einordnung der Arbeit in den aktuellen Forschungsstand sowie 
+eine Erörterung verwandter Ansätze zur Trajektorienvorhersage und physikinformierter Verfahren im Sport.
 
 Die konkrete Aufgabenstellung wird in Kapitel~\ref{cha:problemstellung} präzisiert; dabei werden die zu lösenden Teilprobleme strukturiert und die Zielkriterien für 
-die Evaluation abgeleitet. Kapitel~\ref{cha:methodik_und_modelle} beschreibt darauf aufbauend die Methodik: Es werden die synthetische Datengenerierung, die 
-konzipierten Modellansätze sowie das Experimentdesign zur vergleichenden Bewertung der Modelle erläutert.
+die Evaluation abgeleitet. Kapitel~\ref{cha:methodik_und_modelle} beschreibt darauf aufbauend die Methodik, einschließlich Datengenerierung, Modellarchitekturen 
+und Versuchsplan zur vergleichenden Bewertung.
 
 Kapitel~\ref{cha:ergebnisse_und_diskussion} präsentiert die empirischen Resultate und diskutiert sie systematisch im Bezug auf die Forschungsfragen. 
 Abschließend fasst Kapitel~\ref{cha:fazit} die wesentlichen Erkenntnisse zusammen, reflektiert ihre Aussagekraft und skizziert Perspektiven für weiterführende 
