--- a/Packages.tex
+++ b/Packages.tex
@@ -14,6 +14,8 @@
 % Für eine schöne Anordnung von Bildern
 \usepackage{subfigure}
 
+\usepackage{amssymb}
+
 \usepackage{dsfont}
 %\usepackage{color}
 %
